src/test/test-models/bad/multiply_sample.stan
data {
  real y;
}
model {
  y ~ multiply(3);
}
